# OpenAIBuildWeek

./: .env.example  .gitignore  AGENTS.md  Makefile  NETWORK_AGENT_BUILD_SPEC.md  README.md  ai_context.py  backend.py  coordinator.py  models.py  pyproject.toml  requirements.txt  store.py  ui.py
app/: __init__.py  database.py  main.py  normalizers.py  policy.py  schemas.py  services.py  settings.py  time_utils.py
config/: agent_policy.yaml  blocked_sources.json  firewall_policies.json  known_hosts.json
contracts/: agent-analysis-v1.schema.json  chat-context-response-v1.schema.json  context-request-v1.schema.json  decision-v1.schema.json  drop-event-v1.schema.json  enforcement-result-v1.schema.json  generic-network-event-v1.schema.json  network-event-v1.schema.json  zeek-event-v1.schema.json
fixtures/: agent_analysis_vpn_https.json  allow_vpn_https.json  block_temporary.json  chat_context_response_vpn_https.json  context_request_incomplete_zeek.json  context_request_vpn_https.json  context_request_vpn_https_round_2.json  deny_vpn_https.json  drop_vpn_https.json  enforcement_applied.json  generic_network_alert.json  malicious_broad_decision.json  normalized_drop_vpn_https.json  zeek_conn.json
scripts/: __init__.py  demo.py  send_test_context.py  send_test_decision.py  send_test_drop.py  send_test_zeek.py  smoke_reasoner.py
tests/: __init__.py  conftest.py  helpers.py  test_ai_context.py  test_backend.py  test_context_contracts.py  test_context_flow.py  test_context_persistence.py  test_coordinator.py  test_decisions.py  test_enforcement_recovery.py  test_policy.py  (+6 more)
(+12 files in other folders)
